[package]
name = "embedded-nal-async-std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12", default-features = false}
futures = "0.3"
embedded-nal-async = "0.1.0"

[dev-dependencies]
async-std = {version = "1.12", features = ["attributes"]}

